# xfce4-smartbookmark-plugin

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac  configure.ac.in  meson.build
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  ku.po  lo.po  lt.po  lv.po  ms.po  nb.po  nl.po  (+25 more)
src/: Makefile.am  meson.build  smartbookmark.c  smartbookmark.desktop.in  smartbookmark.desktop.in.in
